--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content=" Little Lemon is a mediterranean restaurant that serves modern italian dishes"
     />
+    <meta name="og:title" content="Little Lemon"/>
+    <meta name="og:url" content="http://www.Little-lemon"/>
+    <meta name="og:image" content="logo.png"/>
+    <meta name="og:type" content="website"/>
+    <meta
+      name="og:description"
+      content=" Little Lemon is a mediterranean restaurant that serves modern italian dishes"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
